--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.2",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-dom": "^18.2.0",
+    "react-load-script": "^0.0.6",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.57.1",
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.0.1"
   }
 }
