--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.2",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "js-cookie": "^3.0.1",
