--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -12,6 +12,15 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master
+        runs-on: ubuntu-latest
+        strategy:
+          matrix:
+            node-version: [16.x]
+
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
 
       - name: Make changes
         run: |
