--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Push changes to other repo
         uses: ad-m/github-push-action@master
         with:
-          token: ${{ secrets.AUTO_PUSH_TOKEN }}
+          github_token: ${{ secrets.AUTO_PUSH_TOKEN }}
           branch: main
           repository: pwanstax/monkey-d-frontend
 
