--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -2,7 +2,18 @@ name: Push to monkey-d-frontend
 
 permissions:
   id-token: write
-  contents: read
+  contents: write
+  actions: write
+  checks: write
+  deployments: write
+  discussions: write
+  issues: write
+  pages: read
+  packages: write
+  pull-requests: write
+  repository-projects: write
+  security-events: write
+  statuses: write
 
 on:
   push:
