--- a/.github/workflows/auto-push.yml
+++ b/.github/workflows/auto-push.yml
@@ -1,11 +1,11 @@
-name: Push to monkey-d-frontend
+name: auto-push
 
- permissions:
-   id-token: write
-   contents: read
-   actions: write
-   checks: write
-   deployments: write
+permissions:
+  id-token: write
+  contents: read
+  actions: write
+  checks: write
+  deployments: write
   discussions: write
   issues: write
   pages: read
