--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@react-pdf/renderer": "^3.1.9",
     "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -24,7 +25,8 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.57.1",
     "socket.io-client": "^4.6.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
